Fix EZP-21182: Implement the FormView view and add it the ContentEditView !squash Fixes to CSS according to review

--- a/Resources/public/css/contenteditformview.css
+++ b/Resources/public/css/contenteditformview.css
@@ -9,8 +9,11 @@
 .ez-view-contenteditformview .ez-form-content fieldset {
     margin-bottom: 20px;
     position: relative;
+    padding-top: 1em;
 }
 
 .ez-view-contenteditformview .ez-form-content fieldset label {
     cursor: pointer;
+    padding: 0 10px;
+    position: absolute;
 }
